# relayd-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config
.github/: funding.yml
.github/workflows/: build.yml  cron.yml
examples/: macros.conf  relayd.conf
src/: config.rs  error.rs  health.rs  lib.rs  main.rs  message.rs  options.rs  parent.rs  redirect.rs  relay.rs
src/config/: expand.rs  parser.rs
