[package]
name = "relayd"
version = "0.1.0"
authors = ["Reyk Floeter <contact@reykfloeter.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
futures = "0.3.14"
getopts = "0.2.21"
log = "0.4.14"
nix = "0.22.1"
nom = "7.0.0"
privsep = { version = "0.0.1-test.7", features = [ "log" ] }
privsep-derive = "0.0.1-test.7"
privsep-log = "0.0.1-test.3"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_with = "1.9"

[dependencies.tokio]
version = "1.4.0"
features = [ "fs", "net", "time", "rt-multi-thread", "macros", "io-util", "signal" ]

#[patch.crates-io]
#privsep = { version = "0.0.1-test.7", git = "https://github.com/reyk/privsep-rs.git" }
#privsep-derive = { version = "0.0.1-test.7", git = "https://github.com/reyk/privsep-rs.git" }
#privsep-log = { version = "0.0.1-test.3", git = "https://github.com/reyk/privsep-rs.git" }
