[package]
name = "relayd"
version = "0.1.0"
authors = ["Reyk Floeter <contact@reykfloeter.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.4.0"
derive_more = "0.99"
futures = "0.3.14"
getopts = "0.2.21"
log = "0.4.14"
nix = "0.22.1"
nom = "7.0.0"
privsep = { version = "0.0.2", features = [ "log" ] }
privsep-derive = "0.0.1"
privsep-log = "0.0.1"
serde = { version = "1.0.125", features = ["derive"] }
serde_with = "1.9"
tokio-ping = "0.3.0"

[dependencies.tokio]
version = "1.4.0"
features = [ "fs", "net", "time", "rt-multi-thread", "macros", "io-util", "signal" ]

[features]
debug = [ "privsep-log/debug" ]

#[patch.crates-io]
#privsep = { path = "../privsep-rs/privsep" }
#privsep-derive = {  path = "../privsep-rs/privsep-derive" }
#privsep-log = { path = "../privsep-rs/log" }
